# InfiniteGUI-Minecraft-DLL

./: CMakeLists.txt  CMakePresets.json  InfOverlayDLL.sln  README.md
.github/workflows/: main.yml
InfOverlayDLL/: AffixModule.h  App.h  AudioManager.cpp  BilibiliFansItem.cpp  BilibiliFansItem.h  Clock.cpp  Clock.h  ConfigManager.cpp  ConfigManager.h  CounterItem.cpp  CounterItem.h  DanmakuItem.cpp  DanmakuItem.h  DanmakuWindow.cpp  DanmakuWindow.h  FileCountItem.cpp  FileCountItem.h  FileUtils.h  FpsItem.cpp  FpsItem.h  GlobalConfig.h  ImGuiStd.h  ImageLoader.cpp  ImageLoader.h  Images.h  InfOverlayDLL.vcxproj  InfOverlayDLL.vcxproj.filters  InfoItem.h  Item.h  ItemManager.cpp  ItemManager.h  LogReader.cpp  LogReader.h  MainUI.cpp  MainUI.h  Menu.cpp  Menu.h  Module.h  ModuleFactory.h  ModuleManager.cpp  (+24 more)
InfOverlayDLL/fonts/: IconFont.h  Uranus_Pixel_11Px.h
InfOverlayDLL/imgui/: imgui_widgets.cpp
InfOverlayDLL/pics/: MCInjector-small.h
InfiniteGUI-DLL/: AboutsPanel.h  AffixModule.h  Anim.h  AnimButtonBase.h  App.cpp  App.h  BilibiliFansItem.cpp  BilibiliFansItem.h  Blur.cpp  Blur.h  CPSDetector.h  CPSItem.cpp  CPSItem.h  CategoryBar.h  ChangeLog.cpp  ChangeLog.h  ClickCircle.h  ClickEffect.cpp  ClickEffect.h  ClickSound.h  ConfigManager.cpp  ConfigManager.h  ConfigSelector.h  CounterItem.cpp  CounterItem.h  DanmakuItem.cpp  DanmakuItem.h  FileCountItem.cpp  FileCountItem.h  FileUtils.h  FontSelector.h  FpsItem.cpp  FpsItem.h  GameStateDetector.cpp  GameStateDetector.h  GameWindowTool.cpp  GameWindowTool.h  GlobalConfig.cpp  GlobalConfig.h  GlobalSettings.h  (+59 more)
InfiniteGUI-DLL/imgui/: imgui.cpp  imgui_impl_opengl3.cpp
